--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/archiver": "^7.0.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^25.1.0",
+    "archiver": "^7.0.1",
     "axios": "^1.13.4",
+    "cors": "^2.8.6",
+    "express": "^5.2.1",
     "fs-extra": "^11.3.3",
     "puppeteer": "^24.36.1",
     "ts-node": "^10.9.2",
